turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:13: error: ')' expected but 'else' found.
    else{droite();avance()}
    ^