turmites.lessons.turmites.helloturmite.HelloTurmite.scala.code
var state = 0;

def step(colors:Array[Color], rule:Array[Array[Array[Int]]] ) {
  var x =0
  var c= getCouleurSol()
  for(i<-0 to colors.length - 1){
    if(c == colors(i)){x=i}
  }
       setCouleurBrosse(colors((x+1)%colors.length));baisseBrosse();leveBrosse()
    if(rule(state()(x)){gauche();avance();}
    else{droite();avance()}
  }
